User Profile thingy (Haven't completed -> need access to firebase) Search function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="leave_a_review">Leave a Review</string>
     <string name="submit">Submit</string>
     <string name="leave_a_review_here">Leave a review here</string>
+    <string name="log_out">Log Out</string>
 </resources>
